objects/ASI_MFM_PO_Line_Item_Capex__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Promotion_Category__c</fullName>
        <label>Promotion Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code_Only__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_AP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Please select an active A&amp;P Code</errorMessage>
            <filterItems>
                <field>ASI_MFM_AP_Code__c.ASI_MFM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Description__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_AP_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>TR PO Line Item</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>TR PO Line Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_Paid_Amouint__c</fullName>
        <label>Actual Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_Spending_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For KR MFM Use  In Local Currency</description>
        <label>Actual Spending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Adjust_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjust PO Number</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Adjusted_Amount__c</fullName>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Adjustment_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjustment Line?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_All_Payment_Effective__c</fullName>
        <formula>(  ASI_MFM_Paid_Amount__c =  ASI_MFM_Actual_Paid_Amouint__c  ) &amp;&amp; (ASI_MFM_Paid_Amount__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Payment Effective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Already_Paid_or_Receipt__c</fullName>
        <formula>(ASI_MFM_Paid_Amount__c &gt; 0 || ASI_MFM_CN_Receipt_Amount__c &gt; 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Already Paid or Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_Local_Currency__c</fullName>
        <formula>ASI_MFM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Local Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Approval_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Asset_Number__c</fullName>
        <label>Asset Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Code</label>
        <referenceTo>ASI_MFM_BU__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Base_Currency_Amount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Base_Currency_Remaining_Balance__c</fullName>
        <description>calculate Base Currency in Remaining Balance, another Formula:ASI_MFM_Base_Currency_Amount__c -  ASI_MFM_Actual_Paid_Amouint__c * ASI_MFM_Exchange_Rate__c  , 0)</description>
        <formula>ASI_MFM_PO__r.ASI_MFM_Exchange_Rate__c *  ASI_MFM_Remaining_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Currency Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.ASI_MFM_Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_PaidAmount_PrePaidAmount__c</fullName>
        <formula>ASI_MFM_CN_Paid_Amount__c - ASI_MFM_CN_PrePaid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PaidAmount - PrePaidAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_PrePaid_Amount__c</fullName>
        <label>PrePaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_ReceiptNotPaid__c</fullName>
        <formula>ASI_MFM_CN_Receipt_Amount__c -  ASI_MFM_CN_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt but Not Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Receipt_Amount__c</fullName>
        <label>Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Receipt_Prepaid_amount__c</fullName>
        <label>Receipt (Prepaid amount)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Remaining_Receipt_Balance__c</fullName>
        <formula>ASI_MFM_Amount__c -  ASI_MFM_CN_Receipt_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Receipt Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel</label>
        <referenceTo>ASI_MFM_Channel_Allocation__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Currency__c</fullName>
        <formula>Text( ASI_MFM_PO__r.ASI_MFM_Currency__c )</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Code__c</fullName>
        <formula>ASI_MFM_Customer_Name__r.ASI_MFM_Customer_Supplier_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PO Line Capex Items</relationshipLabel>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Delete_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_DistributorAmount_in_POCurrency__c</fullName>
        <label>Distributor Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Distributor_Amount__c</fullName>
        <label>Distributor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Date__c</fullName>
        <label>ETL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Finance_Verify_Date__c</fullName>
        <label>Finance Verify Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_PRG_Amount__c</fullName>
        <formula>ASI_MFM_Amount__c -  ASI_MFM_Distributor_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Gulf Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GF_PrePaid_Amt_PO_Currency__c</fullName>
        <label>Pre-Paid Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date_Formular__c</fullName>
        <formula>TEXT( YEAR(ASI_MFM_G_L_Date__c ))  +  LPAD(TEXT(MONTH(ASI_MFM_G_L_Date__c ) ),2,&apos;0&apos;) +  LPAD(TEXT(DAY(ASI_MFM_G_L_Date__c ) ),2,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>G/L Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GnH_Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Has_Final_Receipt__c</fullName>
        <label>Has Final Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Has_Receipt__c</fullName>
        <description>For KR MFM</description>
        <label>Has Receipt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_JDE_Status__c</fullName>
        <label>JDE Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accrual</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_subLedger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipName>subLedger_PO_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_List_Item_Description__c</fullName>
        <label>List Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PH_DP</fullName>
                </value>
                <value>
                    <fullName>PH_DF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Next_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Open_BU_Currency__c</fullName>
        <formula>ASI_MFM_Exchange_Rate__c *  ASI_MFM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open (BU Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Open_But_Not_Receipt_BU_Currency__c</fullName>
        <formula>ASI_MFM_Open_BU_Currency__c - ASI_MFM_Receipt_BU_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open But Not Receipt (BU Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_OpeningBalance_From_POR__c</fullName>
        <label>Opening Balance From POR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Opening_Balance__c</fullName>
        <formula>ASI_MFM_Amount__c - ASI_MFM_OpeningBalance_From_POR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Original_Amount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Original_Receipt_Amount__c</fullName>
        <label>Original Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Outstanding_Receipt_Balance__c</fullName>
        <label>Outstanding Receipt Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POSM: Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_POSM_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POSM: Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_PO_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount_in_PR_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PO Amount in PR Currency 
KR MFM</description>
        <label>PO Amount in PR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Item_External_IDUpload__c</fullName>
        <description>ASI_MFM_PO_Line_Item_External_IDUpload__c</description>
        <externalId>true</externalId>
        <label>PO Line Item External ID (Upload)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Line_Item_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>PO Line Item External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Original_Amount__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_PO_Original_Amount__c</formula>
        <label>PO Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Percentage__c</fullName>
        <label>PO %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Raised_By__c</fullName>
        <formula>IF( !ISBLANK(ASI_MFM_PO__r.CreatedBy.FirstName) , ASI_MFM_PO__r.CreatedBy.FirstName + &apos; &apos; +  ASI_MFM_PO__r.CreatedBy.LastName, ASI_MFM_PO__r.CreatedBy.LastName)</formula>
        <label>PO Raised By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Remark__c</fullName>
        <label>PO Remark</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Status__c</fullName>
        <formula>Text( ASI_MFM_PO__r.ASI_MFM_Status__c )</formula>
        <label>PO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Supplier_Number__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_Supplier_Number__c</formula>
        <label>PO Supplier Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Syn_Now__c</fullName>
        <formula>IF(ASI_MFM_PO__r.ASI_MFM_Syn_Now__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <label>PO Syn Now?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Type__c</fullName>
        <formula>TEXT(ASI_MFM_PO__r.ASI_MFM_PO_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO__c</fullName>
        <label>PO</label>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>PO Depreciation Line Items</relationshipLabel>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PaidAmount_in_BaseCurrency__c</fullName>
        <label>Paid Amount in Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount_in_PO_Currency_PRG__c</fullName>
        <label>Paid Amount in PO Currency (PR Gulf)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Paid_Amount_in_PO_Currency__c</fullName>
        <label>Paid Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Partial_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Pay_Acc__c</fullName>
        <label>Pay/Acc</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay/Acc</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_BU_Currency__c</fullName>
        <formula>ASI_MFM_Exchange_Rate__c * ASI_MFM_CN_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment (BU Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment_YTD__c</fullName>
        <formula>ASI_MFM_Amount__c * 0.9</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Payment YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Owner__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_Plan__r.ASI_MFM_Owner_Link__r.Username</formula>
        <label>Plan Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Post_G_L_Date__c</fullName>
        <label>Post G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PrePayment_Amount_in_PO_Currency__c</fullName>
        <label>Pre-Payment Amount in PO Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Print_Sequence__c</fullName>
        <label>Print Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Project_Code__c</fullName>
        <label>Project Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Purchase_Request_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Request Line</label>
        <referenceTo>ASI_MFM_Purchase_Request_Line__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_Amount_in_Base_Currency__c</fullName>
        <formula>ASI_MFM_CN_Receipt_Amount__c *  ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt Amount in Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_BU_Currency__c</fullName>
        <formula>ASI_MFM_Exchange_Rate__c *  ASI_MFM_CN_Receipt_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt (BU Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_But_Not_Paid_BU_Currency__c</fullName>
        <formula>ASI_MFM_Receipt_BU_Currency__c - ASI_MFM_Payment_BU_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipt But Not Paid (BU Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_Date__c</fullName>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Receipt_YTD__c</fullName>
        <description>Assume start date and end date are within same fiscal year.</description>
        <formula>if(OR( ISPICKVAL(ASI_MFM_PO__r.ASI_MFM_PO_Type__c, &apos;e-Market&apos;), ISPICKVAL(ASI_MFM_PO__r.ASI_MFM_PO_Type__c, &apos;Free Good&apos;) ) 
,null,
ASI_MFM_Amount__c * 
if(TEXT( ASI_MFM_PO__r.ASI_MFM_PO_Type__c ) = &apos;In Channel Event&apos;, ASI_MFM_PO__r.ASI_MFM_Event_ID__r.ASI_MFM_Event__r.ASI_MFM_CN_Completed_Outlet_Ratio__c ,
if(
	if(
		OR(TODAY()&gt;=ASI_MFM_PO__r.ASI_MFM_PO_End_Date__c,
			AND(MONTH(TODAY())=MONTH(ASI_MFM_PO__r.ASI_MFM_PO_End_Date__c),YEAR(TODAY())=YEAR(ASI_MFM_PO__r.ASI_MFM_PO_End_Date__c))
			),1,

(if (month (Today()) =12, DATE (YEAR (Today()),12,31),Date(Year(Today()),MONTH(TODAY())+1,1)-1)-ASI_MFM_PO__r.ASI_MFM_PO_Start_Date__c+1)/
(ASI_MFM_PO__r.ASI_MFM_PO_End_Date__c - ASI_MFM_PO__r.ASI_MFM_PO_Start_Date__c+1)

)&lt;0,0,if(((if (month (Today()) =12, DATE (YEAR (Today()),12,31),Date(Year(Today()),MONTH(TODAY())+1,1)-1)-ASI_MFM_PO__r.ASI_MFM_PO_Start_Date__c+1)/
(ASI_MFM_PO__r.ASI_MFM_PO_End_Date__c - ASI_MFM_PO__r.ASI_MFM_PO_Start_Date__c+1))&gt;1,1,
((if (month (Today()) =12, DATE (YEAR (Today()),12,31),Date(Year(Today()),MONTH(TODAY())+1,1)-1)-ASI_MFM_PO__r.ASI_MFM_PO_Start_Date__c+1)/
(ASI_MFM_PO__r.ASI_MFM_PO_End_Date__c - ASI_MFM_PO__r.ASI_MFM_PO_Start_Date__c+1))
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Receipt YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Recharge_Amount__c</fullName>
        <formula>ASI_MFM_Amount__c *  ASI_MFM_Recharge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recharge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Recharge__c</fullName>
        <label>Recharge %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reference</label>
        <referenceTo>ASI_MFM_Reference__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remaining_Balance__c</fullName>
        <formula>ASI_MFM_Amount__c - ASI_MFM_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Requested_Balance__c</fullName>
        <formula>ASI_MFM_Amount__c - ASI_MFM_Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Requested_PR_Qty__c</fullName>
        <formula>ASI_MFM_Purchase_Request_Line__r.ASI_MFM_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested PR Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SG_BA_verify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BA verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SG_Unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Code</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Service_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Spread_by_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spread</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Status__c</fullName>
        <label>TBD_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand_Code_Only__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_Brand_Name__c</fullName>
        <formula>ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Allocation_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Allocation Type</label>
        <referenceTo>ASI_MFM_Sub_brand_Allocation__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand Code</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sys_Sync_Time__c</fullName>
        <label>Sys_Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TH_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GBKK</fullName>
                </value>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>STH</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>SD TT Off</fullName>
                </value>
                <value>
                    <fullName>SD TT On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_TH_Unit__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>